[gd_scene load_steps=5 format=3 uid="uid://bacw644vbs8m0"]

[ext_resource type="Script" path="res://scripts/ritual_to_collect.gd" id="1_7vxm7"]
[ext_resource type="Texture2D" uid="uid://c7ltlf6k1uq1y" path="res://assets/sprites/Miscelaneous/circle.png" id="2_3tjc4"]
[ext_resource type="LabelSettings" uid="uid://782lfjthxeo4" path="res://assets/fonts/standard_label_settings.tres" id="3_wmn0c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vi1me"]
radius = 132.061

[node name="ritual_to_collect" type="Node2D"]
script = ExtResource("1_7vxm7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7.62939e-06, -0.999996)
scale = Vector2(0.888889, 0.861111)
texture = ExtResource("2_3tjc4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vi1me")

[node name="Label" type="Label" parent="."]
visible = false
z_index = 2
offset_left = -64.0
offset_top = -71.0
offset_right = 65.0
offset_bottom = -22.0
text = "Press F to 
learn Ritual"
label_settings = ExtResource("3_wmn0c")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
